Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-19301

[Inet] Security : "Imagelist no longer valid" when closing

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Minor
    • 0.4.15
    • RosDlls
    • None

    Description

      reactos-bootcd-0.4.15-dev-6826-gdabb3f4-x86-gcc-lin-dbg

      Very similar to CORE-17290 and  CORE-19187

      This leads to logging : 

      err:(dll/win32/comctl32/imagelist.c:4007) Imagelist no longer valid: 0x00254C28 

      As for the 2 other tickets, problem comes from ImageList_Destroy being called on an image file that has already been destroyed in LISTVIEW_NCDestroy 

      call to SendMessageW(sd->hlv, LVM_SETIMAGELIST, LVSIL_NORMAL, 0); here https://git.reactos.org/?p=reactos.git;a=blob;f=dll/cpl/inetcpl/security.c;hb=fa4b38d902d13072b7b982a4411a31cb84ab24b3#l279 was a good attempt but done after LISTVIEW_NCDestroy, and therefore totally useless.

      Patch : inetsec.patch

      Attachments

        Issue Links

          Activity

            People

              katayama_hirofumi_mz Katayama Hirofumi MZ
              KRosUser KRosUser
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: