[INETCPL] Let image list be automatically deleted (#5892)

Based on KRosUser's inetsec.patch.
Don't delete the image list because the image list will be automatically deleted by the list view.
CORE-19301