dll/cpl/inetcpl/security.c
@@ -275,10 +275,12 @@ static INT_PTR security_on_destroy(secdlg_data * sd)
 
     heap_free(sd->zone_attr);
     heap_free(sd->zones);
+#ifndef __REACTOS__
     if (sd->himages) {
         SendMessageW(sd->hlv, LVM_SETIMAGELIST, LVSIL_NORMAL, 0);
         ImageList_Destroy(sd->himages);
     }
+#endif
 
     security_cleanup_zones(sd);
     SetWindowLongPtrW(sd->hsec, DWLP_USER, 0);
